# LearningC

./: .11_01.c.swp  .gitignore  11_01  11_01.c  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ala  cmake_install.cmake  compile_commands.json  main.c  run  stud_console.c  stud_sort.c  stud_sort.h  stud_sort.h.gch  stud_types.h  stud_types.h.gch  stud_utils.c  stud_utils.h.gch  students.txt  temp.txt  test.txt
include/: stud_console.h  stud_file.h  stud_mem.h  stud_sort.h  stud_temp.h  stud_types.h  stud_utils.h
src/: stud_console.c  stud_file.c  stud_mem.c  stud_sort.c  stud_temp.c  stud_utils.c
